creacion e implementacion del ambito de persistencia con el server para la app e implementacion de dependencias faltantes en el pom

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,24 @@
             <version>5.8.0</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.6.26.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse</groupId>
+            <artifactId>yasson</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+
         <!-- Dependencias para rest-->
         <dependency>
             <groupId>org.glassfish.jersey.inject</groupId>
@@ -91,7 +109,7 @@
                 <version>3.11.4</version>
                 <configuration>
                     <configDirectory>/openliberty/wlp/templates/servers</configDirectory>
-                    <serverName>defaultServer</serverName>
+                    <serverName>sICServer</serverName>
                     <appsDirectory>dropins</appsDirectory>
                     <looseApplication>true</looseApplication>
                     <stripVersion>true</stripVersion>
