--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,14 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+!**/src/main/liberty/config/server.xml
+
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/
 *.iws
 *.iml
 *.ipr
